@@ -87,11 +87,18 @@ public class OutlookPSTParser extends AbstractParser {
             metadata.set(Metadata.CONTENT_LENGTH, valueOf(pstFile.getFileHandle().length()));
             boolean isValid = pstFile.getFileHandle().getFD().valid();
             metadata.set("isValid", valueOf(isValid));
+            if(pstFile.getPSTFileType() == PSTFile.PST_TYPE_2013_UNICODE) {
+                throw new TikaException("OST 2013 support not added yet. It will be when https://github.com/rjohnsondev/java-libpst/issues/60 is fixed.");
+            }
             if (isValid) {
                 parseFolder(xhtml, pstFile.getRootFolder(), embeddedExtractor);
             }
         } catch (Exception e) {
-            throw new TikaException(e.getMessage(), e);
+            if(e instanceof TikaException) {
+                throw (TikaException) e;
+            }else {
+                throw new TikaException(e.getMessage(), e);
+            }
         } finally {
             if (pstFile != null && pstFile.getFileHandle() != null) {
                 try {
